--- a/index.html
+++ b/index.html
@@ -172,68 +172,30 @@
          <!-- 
         - #SKILLS
       -->
-        <div class="macbook-pro">
-          <div class="div">
-          <div class="text-wrapper">SKILLS</div>
-          <div class="text-wrapper-2">TOOLS</div>
-          <div class="frame">
-          <div class="text-wrapper-3">DESIGN</div>
-          <div class="flexcontainer">
-          <p class="text">
-          <span class="span">UX/UI Design · Prototyping · Wireframing ·<br /></span>
-          </p>
-          <p class="text">
-          <span class="span">Moodboard · Storyboard · Brand Identity ·<br /></span>
-          </p>
-          <p class="text"><span class="span">User Flows · Sitemapping · Design Library · </span></p>
-          </div>
-          </div>
-          <div class="frame-2">
-          <div class="text-wrapper-4">RESEARCH</div>
-          <div class="flexcontainer-2">
-          <p class="span-wrapper">
-          <span class="text-wrapper-5">Personas · User Interviews · Affinity <br /></span>
-          </p>
-          <p class="span-wrapper">
-          <span class="text-wrapper-5">Diagrams · User Journey · Card Sorting ·<br /></span>
-          </p>
-          <p class="span-wrapper">
-          <span class="text-wrapper-5">User Testing · A/B Testing · Pitch Deck ·<br /></span>
-          </p>
-          <p class="span-wrapper">
-          <span class="text-wrapper-5">Data Analysis · Design Thinking Strategy· &nbsp;&nbsp;</span>
-          </p>
-          </div>
-          </div>
-          <div class="group">
-          <div class="frame-3">
-          <img class="XD" src="./assets/img/XD.png" />
-          <img class="AI" src="./assets/img/AI.png" />
-          <img class="ID" src="./assets/img/ID.png" />
-          <img class="LR" src="./assets/img/LR.png" />
-          <img class="PS" src="./assets/img/PS.png" />
-          <img class="codepen" src="./assets/img/Codepen.jpg" />
-          <img class="miro" src="./assets/img/miro.png" />
-          <img class="xcel" src="./assets/img/xcel.png" />
-          <img class="onedrive" src="./assets/img/onedrive.png" />
-          <img class="google" src="./assets/img/google.png" />
-          <img class="dropbox" src="./assets/img/dropbox.png" />
-          <img class="figma" src="./assets/img/figma.png" />
-          <img class="vscode" src="./assets/img/vscode.png" />
-          <img class="github" src="./assets/img/github.jpg" />
-          <img class="powerpoint" src="./assets/img/powerpoint.png" />
-          <img class="trello" src="./assets/img/trello.png" />
-          
-          </div>
-          </div>
-          </div>
-          </div>
 
-      
-        </div>
 
-      </div>
-      </section>
+
+<div class="skills-tools">
+  <figure class="design-skills">
+    <img src="./assets/img/skills-design-skills.png" loading="lazy" alt="Design Skills" class="responsive">
+  </figure>
+</div>
+
+
+<figure class="research-skills">
+  <img src="./assets/img/research-skills.png" loading="lazy" alt="Research Skills" class="responsive">
+</figure>
+
+<figure class="Languages-skills">
+  <img src="./assets/img/languages-skills.png" loading="lazy" alt="Languages" class="responsive">
+</figure>
+
+<figure class="TOOLS">
+  <img src="./assets/img/TOOLS.png" loading="lazy" alt="Tools" class="responsive">
+</figure>
+
+
+</section>
 
 
   
