--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
 
           <li>
-            <a href="./assets/img/funckResume.pdf" download = "Funck Resume" class="btn btn-primary">RESUME</a>
+            <a href="./assets/img/funckResume.pdf" target="blank"  class="btn btn-primary">RESUME</a>
             
           </li>
 
